--- a/overlay-lineage/frameworks/base/packages/SystemUI/res/values-port/config.xml
+++ b/overlay-lineage/frameworks/base/packages/SystemUI/res/values-port/config.xml
@@ -12,8 +12,6 @@
 -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
-    <!-- Doze: does this device support STATE_DOZE?  -->
-    <bool name="doze_display_state_supported">true</bool>
-
+    <!-- Preferred refresh rate at keyguard, if supported by the display -->
+    <integer name="config_keyguardRefreshRate">90</integer>
 </resources>
