--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -17,11 +17,10 @@
 */
 -->
 
- <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Radius of the software rounded corners. -->
     <dimen name="rounded_corner_radius">115px</dimen>
 
+    <!-- Height of the status bar -->
     <dimen name="status_bar_height">115px</dimen>
-
- </resources>
+</resources>
